09-exercise/manifests/deployment-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: busybox
          command: ["sh", "-c", "wget -qO- http://backend-service:8080"]
          ports:
            - containerPort: 80
